--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 741,
+   "execution_count": 866,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -38,13 +29,14 @@
     "from sklearn.decomposition import PCA\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import precision_score, recall_score, accuracy_score, f1_score, roc_auc_score\n",
+    "from sklearn.metrics import precision_score, recall_score, accuracy_score, f1_score, roc_auc_score, confusion_matrix\n",
     "\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "from sklearn.metrics import confusion_matrix"
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from imblearn.over_sampling import SMOTE"
    ]
   },
   {
@@ -15103,11 +15095,7 @@
   {
    "cell_type": "code",
    "execution_count": 712,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fit_model_and_print_metrics(skf_splits,X_not_val, y_not_val, classifier, print_metrics = False):\n",
@@ -15592,7 +15580,12 @@
   {
    "cell_type": "code",
    "execution_count": 810,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -15841,6 +15834,207 @@
     "plt.title(\"Average Incorrect vs Number of Times User Sees a Word with the First Person Feature\")\n",
     "plt.savefig(\"first_vs_target.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 868,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smote = SMOTE(random_state=42, ratio = 1.0)\n",
+    "X_train_res, y_train_res = smote.fit_sample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 869,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3463012"
+      ]
+     },
+     "execution_count": 869,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(y_train_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 870,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3463012"
+      ]
+     },
+     "execution_count": 870,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X_train_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 871,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.7431542573999218\n",
+      "Recall: 0.17783966580465485\n",
+      "Accuracy: 0.5414706715783508\n",
+      "F1: 0.28699929814401576\n",
+      "roc_auc 0.6770344495047033\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[array([1., 0., 1., ..., 0., 0., 0.]),\n",
+       " array([0.55392818, 0.40291616, 0.51062472, ..., 0.48706223, 0.45327165,\n",
+       "        0.44457713])]"
+      ]
+     },
+     "execution_count": 871,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_scores(X_train_res, X_test, y_train_res, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 872,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stk = StratifiedKFold()\n",
+    "stk_indices = stk.split(X_train_res, y_train_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 873,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stk_indices = list(stk_indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 882,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_res = pd.DataFrame(X_train_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 883,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_res = pd.DataFrame(y_train_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss = StandardScaler()\n",
+    "\n",
+    "# Fit on training set only.\n",
+    "ss.fit(X_train_res)\n",
+    "\n",
+    "# Apply transform to both the training set and the test set.\n",
+    "X_train_res = ss.transform(X_train_res)\n",
+    "X_test = ss.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(.85)\n",
+    "pca.fit(X_train_res)\n",
+    "pca.n_components_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 722,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = pca.transform(X_train_res)\n",
+    "X_test = pca.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 884,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score: 0.6659861565063658\n",
+      "precision_score: 0.8059835021977756\n",
+      "recall_score: 0.5100133299583529\n",
+      "f1_score: 0.5765070525279509\n",
+      "roc_auc_score: 0.6659861565063658\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.6659861565063658,\n",
+       " 'precision': 0.8059835021977756,\n",
+       " 'recall': 0.5100133299583529,\n",
+       " 'f1': 0.5765070525279509,\n",
+       " 'roc_auc': 0.6659861565063658}"
+      ]
+     },
+     "execution_count": 884,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt = DecisionTreeClassifier(criterion = 'gini', max_depth = 3)\n",
+    "\n",
+    "fit_model_and_print_metrics(stk_indices, X_res, y_res, dt, print_metrics = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
