Random forrest on test: f1:0.29, roc: 0.637

--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -16962,11 +16962,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy_score: 0.7603950102219659\n",
+      "precision_score: 0.7340866964148218\n",
+      "recall_score: 0.8147549390950993\n",
+      "f1_score: 0.7701009930550603\n",
+      "roc_auc_score: 0.7603950102219659\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.7603950102219659,\n",
+       " 'precision': 0.7340866964148218,\n",
+       " 'recall': 0.8147549390950993,\n",
+       " 'f1': 0.7701009930550603,\n",
+       " 'roc_auc': 0.7603950102219659}"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fit_model_and_print_metrics(stk_indices, X_res, y_res, forest, print_metrics=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit_model_and_print_metrics(stk_indices, X_res, y_res, forest, print_metrics=True)"
+    "fit_model_and_print_metrics(stk_indices_test, X_te, y_te, forest, print_metrics=True)"
    ]
   },
   {
